tried to fix mobile

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         }
 
         body{
+            box-sizing: border-box;
             color: var(--text-color);
             margin: 0 auto;
             max-width: 72ch;
@@ -129,7 +130,7 @@
                 overflow: hidden;
             }
             body{
-                max-width: 50ch;
+                max-width: 100%;
                 padding: 0 6px;
             }
         }
