--- a/index.html
+++ b/index.html
@@ -5,17 +5,74 @@
         <meta name='viewport' content='width=device-width,initial-scale=1'>
         <style>
             body{
-                font-family: monospace;
-                font-size: 1.2em;
+                font-family: sans-serif;
+                background: rgb(241 245 249);
+            }
+            .card-container{
+                display: flex;
+                flex-wrap: wrap;
+                padding: .375rem;
+                gap: .75rem;
+            }
+            .card{
+                width: 100%;
+                max-width: 280px;
+                box-sizing: border-box;
+                background: white;
+                box-shadow: 1px 1px 8px rgb(0 0 0 / 10%);
+                text-align: center;
+                padding: 0 .75rem 1rem .75rem;
+                color: #111;
+                text-decoration: none;
+                transition: all .1s;
+            }
+            .card:hover{
+                background: #fafafa;
+                box-shadow: 1px 2px 12px rgb(0 0 0 / 15%);
+            }
+            .card:active{
+                box-shadow: inset 0 0 12px rgb(0 0 0 / 5%);
+            }
+            .emoji{
+                font-size: 5.5rem;
+                line-height: 120%;
+            }
+            .emoji.reversed{
+                transform: scale(-1, 1);
+            }
+            .card-title{
+                font-size: 1.5rem;
+                font-weight: 500;
+            }
+            .card-description{
+                font-weight: lighter;
+                margin-top: .67rem;
             }
         </style>
     </head>
 
     <body>
-        <ul>
-            <li>View my <a href='/resume_2022.pdf'>resume</a></li>
-            <li>Check out my <a href='https://github.com/mahathu'>GitHub</a></li>
-            <li>Play <a href='/adk'>snake</a></li>
-        </ul>
+        <div class="card-container">
+        <a href='resume_2022.pdf' class="card">
+            <div class="emoji">🕴️<!--👨‍🎓--></div>
+            <div class="card-title">Resume</div>
+            <div class="card-description">What I've done so far</div>
+        </a>
+        <a href='https://github.com/mahathu' class="card">
+            <div class="emoji">💻</div>
+            <div class="card-title">Github</div>
+            <div class="card-description">Some of my open source projects</div>
+        </a>
+        <a href='/adk' class="card">
+            <div class="emoji">🐍</div>
+            <div class="card-title">Achtung, die Kurve!</div>
+            <div class="card-description">A javascript clone of a multiplayer snake game for MS-DOS</div>
+        </a>
+        <a href='https://hallenguru.herokuapp.com' class="card">
+            <div class="emoji reversed">🏊</div>
+            <div class="card-title">Hallenguru</div>
+            <div class="card-description">Find available tickets of public swimming pools in Berlin</div>
+        </a>
+        </div>
     </body>
 </html>
