fixed URL for adk

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card-title">Github</div>
             <div class="card-description">Some of my open source projects</div>
         </a>
-        <a href='/adk' class="card">
+        <a href='adk/' class="card">
             <div class="emoji">🐍</div>
             <div class="card-title">Achtung, die Kurve!</div>
             <div class="card-description">A javascript clone of a multiplayer snake game for MS-DOS</div>
