--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </a>
         <a href='https://github.com/mahathu' class="card">
             <div class="emoji">💻</div>
-            <div class="card-title">Github</div>
+            <div class="card-title">GitHub</div>
             <div class="card-description">Some of my open source projects</div>
         </a>
         <a href='adk/' class="card">
